--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">DnDCharCtor</a>
+        <a class="navbar-brand" href="">@StringResources.App_DnDCharCtor</a>
     </div>
 </div>
 
@@ -23,6 +23,11 @@
             </div>
         }
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="@Routes.Settings">
+                <span class="bi bi-gear-fill" aria-hidden="true"></span> Settings
+            </NavLink>
+        </div>
     </nav>
 </div>
 
