--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -16,7 +16,7 @@
 
 @using DnDCharCtor.Common.Constants
 @using DnDCharCtor.Common.Services
-
+@using DnDCharCtor.Common.Resources
 @using DnDCharCtor.Models
 
 @using DnDCharCtor.Ui.Components
