--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
@@ -1,4 +1,8 @@
-﻿<h3>Settings</h3>
+﻿<FluentHeader>
+    <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
+        <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Settings</FluentLabel>
+    </FluentStack>
+</FluentHeader>
 
 @code {
 
