--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -10,7 +10,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <FluentIcon Value="@(new Icons.Regular.Size20.Home())" Color="@Color.Neutral" /> <FluentLabel>Home</FluentLabel>
+                <FluentIcon Value="@(new Icons.Regular.Size20.Home())" Color="@Color.Neutral" /> <FluentLabel>@StringResources.Page_Home</FluentLabel>
             </NavLink>
         </div>
 
