--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
@@ -1,9 +1,22 @@
-﻿<FluentHeader>
+﻿@attribute [Route(Routes.Settings)]
+
+@inject SettingsViewModel ViewModel
+
+<FluentHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
         <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Settings</FluentLabel>
     </FluentStack>
 </FluentHeader>
 
-@code {
+<FluentStack 
+    Orientation="Orientation.Vertical"
+    VerticalAlignment="VerticalAlignment.Center"
+    HorizontalAlignment="HorizontalAlignment.Center">
+    <FluentSelect 
+        Label="@StringResources.Settings_SelectLanguage" 
+        TOption="KeyValuePair<string, CultureInfo>"
+        Items="ViewModel.Languages"
+        OptionText="@(l => l.Key)"
+        @bind-SelectedOption="@ViewModel.SelectedLanguage"/>
+</FluentStack>
 
-}
