--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.ComponentModel
+@using System.Globalization
 @using System.Linq
 @using System.Linq.Expressions
 @using System.Net.Http
