--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -9,23 +9,29 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <FluentIcon Value="@(new Icons.Regular.Size20.Home())" Color="@Color.Neutral" /> <FluentLabel>@StringResources.Page_Home</FluentLabel>
+            <NavLink class="nav-link" style="display: flex; width=100%" href="" Match="NavLinkMatch.All">
+                <FluentIcon Value="@(new Icons.Regular.Size20.Home())" Color="@Color.Neutral" />
+                <FluentSpacer Width="10" />
+                <FluentLabel>@StringResources.Page_Home</FluentLabel>
             </NavLink>
         </div>
 
         @if (string.IsNullOrWhiteSpace(_currentCharacterViewModel?.PersonalityViewModel?.CharacterName) is false)
         {
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="@Routes.CurrentCharacter">
-                    <FluentIcon Value="@(new Icons.Regular.Size20.Person())" Color="@Color.Neutral" /> <FluentLabel>@_currentCharacterViewModel.PersonalityViewModel.CharacterName</FluentLabel>
+                <NavLink class="nav-link" style="display: flex; width=100%" href="@Routes.CurrentCharacter">
+                    <FluentIcon Value="@(new Icons.Regular.Size20.Person())" Color="@Color.Neutral" />
+                    <FluentSpacer Width="10" />
+                    <FluentLabel>@_currentCharacterViewModel.PersonalityViewModel.CharacterName</FluentLabel>
                 </NavLink>
             </div>
         }
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="@Routes.Settings">
-                <FluentIcon Value="@(new Icons.Regular.Size20.AppsSettings())" Color="@Color.Neutral" /> <FluentLabel>@StringResources.Page_Settings</FluentLabel>
+            <NavLink class="nav-link" style="display: flex; width=100%" href="@Routes.Settings">
+                <FluentIcon Value="@(new Icons.Regular.Size20.AppsSettings())" Color="@Color.Neutral" />
+                <FluentSpacer Width="10" />
+                <FluentLabel>@StringResources.Page_Settings</FluentLabel>
             </NavLink>
         </div>
     </nav>
