Linter: Put Logic in Code-behind (except `@inherits` and `@implements`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -1,6 +1,4 @@
-﻿@inject IDialogService DialogService
-
-<CardBase Title="@StringResources.Character_Personality" EditCallback="EditPersonality" HasValidationErrors="@(_personalityViewModel?.HasValidationErrors ?? false)">
+﻿<CardBase Title="@StringResources.Character_Personality" EditCallback="EditPersonality" HasValidationErrors="@(_personalityViewModel?.HasValidationErrors ?? false)">
     <br />
     <div><strong>@StringResources.Character_Name:</strong> @_personalityViewModel?.CharacterName </div>
     <br />
