--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -1,10 +1,4 @@
-﻿@attribute [Route(Routes.EditCharacter)]
-@page "/editCharacter/{id}"
-
-@inject EditCharacterViewModel ViewModel
-@inject NavigationManager NavigationManager
-
-<FluentHeader>
+﻿<FluentHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
         <FluentLabel Typo="Typography.PaneHeader">@_title</FluentLabel>
     </FluentStack>
