--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,6 +1,1 @@
-﻿@page "/"
-
-@inject IHybridCacheService HybridCacheService
-@inject NavigationManager NavigationManager
-
-<PageTitle>Home</PageTitle>
+﻿<FluentProgressRing />
