--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
@@ -1,8 +1,4 @@
-﻿@attribute [Route(Routes.Settings)]
-
-@inject SettingsViewModel ViewModel
-
-<FluentHeader>
+﻿<FluentHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
         <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Settings</FluentLabel>
     </FluentStack>
