Update: Use Overlay and Center ProgressRing;

--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
@@ -8,7 +8,13 @@
 
         <main>
             <article class="content px-4">
-                <FluentProgressRing Visible="@ViewModel.IsBusy" />
+                <FluentOverlay 
+                    Visible="@ViewModel.IsBusy"
+                    Opacity="0.4"
+                    Alignment="Align.Center"
+                    Justification="JustifyContent.Center">
+                    <FluentProgressRing Visible="@ViewModel.IsBusy" />
+                </FluentOverlay>
                 @Body
             </article>
 
