--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,1 +1,6 @@
-﻿<FluentProgressRing />
+﻿<FluentOverlay
+    Opacity="0.4"
+    Alignment="Align.Center"
+    Justification="JustifyContent.Center">
+    <FluentProgressRing />
+</FluentOverlay>
