--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
@@ -18,6 +18,7 @@
                 @Body
             </article>
 
+            <FluentDesignTheme StorageName="@StorageKeys.Theme" />
             <FluentDialogProvider />
             <FluentTooltipProvider />
         </main>
