--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -15,6 +15,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 
 @using Microsoft.FluentUI.AspNetCore.Components
+@using Microsoft.FluentUI.AspNetCore.Components.Extensions
 
 @using DnDCharCtor.Common.Constants
 @using DnDCharCtor.Common.Services
