--- a/DnDCharCtor/DnDCharCtor.Ui/wwwroot/app.css
+++ b/DnDCharCtor/DnDCharCtor.Ui/wwwroot/app.css
@@ -1,5 +1,13 @@
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    font-family: var(--body-font);
+    font-size: var(--type-ramp-base-font-size);
+    line-height: var(--type-ramp-base-line-height);
+    font-weight: var(--font-weight);
+    color: var(--neutral-foreground-rest);
+    background: var(--neutral-fill-layer-rest);
 }
 
 a, .btn-link {
