--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -9,10 +9,10 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" style="display: flex; width=100%" href="" Match="NavLinkMatch.All">
-                <FluentIcon Value="@(new Icons.Regular.Size20.Home())" Color="@Color.Neutral" />
+            <NavLink class="nav-link" style="display: flex; width=100%;" href="" Match="NavLinkMatch.All">
+                <FluentIcon Value="@(new Icons.Regular.Size20.Home())" Color="Color.Custom" CustomColor="white" />
                 <FluentSpacer Width="10" />
-                <FluentLabel>@StringResources.Page_Home</FluentLabel>
+                <FluentLabel Color="Color.Custom" CustomColor="white">@StringResources.Page_Home</FluentLabel>
             </NavLink>
         </div>
 
@@ -20,18 +20,18 @@
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" style="display: flex; width=100%" href="@Routes.CurrentCharacter">
-                    <FluentIcon Value="@(new Icons.Regular.Size20.Person())" Color="@Color.Neutral" />
+                    <FluentIcon Value="@(new Icons.Regular.Size20.Person())" Color="Color.Custom" CustomColor="white" />
                     <FluentSpacer Width="10" />
-                    <FluentLabel>@_currentCharacterViewModel.PersonalityViewModel.CharacterName</FluentLabel>
+                    <FluentLabel Color="Color.Custom" CustomColor="white">@_currentCharacterViewModel.PersonalityViewModel.CharacterName</FluentLabel>
                 </NavLink>
             </div>
         }
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" style="display: flex; width=100%" href="@Routes.Settings">
-                <FluentIcon Value="@(new Icons.Regular.Size20.AppsSettings())" Color="@Color.Neutral" />
+                <FluentIcon Value="@(new Icons.Regular.Size20.AppsSettings())" Color="Color.Custom" CustomColor="white" />
                 <FluentSpacer Width="10" />
-                <FluentLabel>@StringResources.Page_Settings</FluentLabel>
+                <FluentLabel Color="Color.Custom" CustomColor="white">@StringResources.Page_Settings</FluentLabel>
             </NavLink>
         </div>
     </nav>
