--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
@@ -63,4 +63,6 @@
         </FluentStack>
     </FluentGridItem>
 </FluentGrid>
+
+<!--This break ensures that the select is not completely at the end of the page-->
 <br />
