--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
@@ -15,54 +15,47 @@
     </FluentStack>
 </FluentHeader>
 <br />
-<FluentGrid>
-    <FluentGridItem xs="12">
-        <FluentStack Orientation="Orientation.Vertical"
-                     VerticalAlignment="VerticalAlignment.Center"
-                     HorizontalAlignment="HorizontalAlignment.Center">
-            <FluentLabel Typo="Typography.PaneHeader">@StringResources.Settings_LanguageSettings</FluentLabel>
-            <br />
-            <FluentSelect Label="@StringResources.Settings_SelectLanguage"
-                          TOption="KeyValuePair<string, CultureInfo>"
-                          Items="ViewModel.Languages"
-                          OptionText="@(l => l.Key)"
-                          @bind-SelectedOption="@ViewModel.SelectedLanguage" />
-        </FluentStack>
-    </FluentGridItem>
-    <FluentGridItem>
-        <br />
-        <FluentDivider xs="12" />
-        <br />
-    </FluentGridItem>
-    <FluentGridItem xs="12">
-        <FluentStack 
-            Orientation="Orientation.Vertical" 
-            VerticalAlignment="VerticalAlignment.Center" 
-            HorizontalAlignment="HorizontalAlignment.Center">
-            <FluentLabel Typo="Typography.PaneHeader">@StringResources.Settings_ThemeSettings</FluentLabel>
-            <br />
-            <FluentSelect Label="@StringResources.Settings_SelectTheme"
-                          Width="250px"
-                          Items="@(Enum.GetValues<DesignThemeModes>())"
-                          @bind-SelectedOption="@Mode" />
-            <br />
-            <FluentSelect Label="@StringResources.Settings_SelectColor"
-                          Items="@(Enum.GetValues<OfficeColor>().Select(i => (OfficeColor?)i))"
-                          Height="200px"
-                          Width="250px"
-                          @bind-SelectedOption="@OfficeColor">
-                <OptionTemplate>
-                    <FluentStack>
-                        <FluentIcon Value="@(new Icons.Filled.Size20.RectangleLandscape())"
-                                    Color="Color.Custom"
-                                    CustomColor="@(@context.ToAttributeValue() != "default" ? context.ToAttributeValue() : "#036ac4" )" />
-                        <FluentLabel>@context</FluentLabel>
-                    </FluentStack>
-                </OptionTemplate>
-            </FluentSelect>
-        </FluentStack>
-    </FluentGridItem>
-</FluentGrid>
+<FluentStack Orientation="Orientation.Vertical"
+             VerticalAlignment="VerticalAlignment.Center"
+             HorizontalAlignment="HorizontalAlignment.Center">
+    <FluentLabel Typo="Typography.PaneHeader">@StringResources.Settings_LanguageSettings</FluentLabel>
+    <br />
+    <FluentSelect Label="@StringResources.Settings_SelectLanguage"
+                  TOption="KeyValuePair<string, CultureInfo>"
+                  Items="ViewModel.Languages"
+                  OptionText="@(l => l.Key)"
+                  @bind-SelectedOption="@ViewModel.SelectedLanguage" />
+</FluentStack>
+
+<br />
+<FluentDivider />
+<br />
+
+<FluentStack Orientation="Orientation.Vertical"
+             VerticalAlignment="VerticalAlignment.Center"
+             HorizontalAlignment="HorizontalAlignment.Center">
+    <FluentLabel Typo="Typography.PaneHeader">@StringResources.Settings_ThemeSettings</FluentLabel>
+    <br />
+    <FluentSelect Label="@StringResources.Settings_SelectTheme"
+                  Width="250px"
+                  Items="@(Enum.GetValues<DesignThemeModes>())"
+                  @bind-SelectedOption="@Mode" />
+    <br />
+    <FluentSelect Label="@StringResources.Settings_SelectColor"
+                  Items="@(Enum.GetValues<OfficeColor>().Select(i => (OfficeColor?)i))"
+                  Height="200px"
+                  Width="250px"
+                  @bind-SelectedOption="@OfficeColor">
+        <OptionTemplate>
+            <FluentStack>
+                <FluentIcon Value="@(new Icons.Filled.Size20.RectangleLandscape())"
+                            Color="Color.Custom"
+                            CustomColor="@(@context.ToAttributeValue() != "default" ? context.ToAttributeValue() : "#036ac4" )" />
+                <FluentLabel>@context</FluentLabel>
+            </FluentStack>
+        </OptionTemplate>
+    </FluentSelect>
+</FluentStack>
 
 <!--This break ensures that the select is not completely at the end of the page-->
 <br />
