--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -1,6 +1,6 @@
 ﻿<FluentHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
-        <FluentLabel Typo="Typography.PaneHeader">@_title</FluentLabel>
+        <FluentLabel Typo="Typography.PaneHeader">@Title</FluentLabel>
     </FluentStack>
 </FluentHeader>
 
