Update: Validation-Error-UI;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
@@ -22,6 +22,8 @@
         </FluentStack>
 
         <div style="color: var(--error);">
+            <br />
+            <FluentDivider />
             <FluentValidationSummary />
         </div>
     </EditForm>
