WIP: Create New Projects for `Resources` and `Validation`;

--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -19,7 +19,7 @@
 
 @using DnDCharCtor.Common.Constants
 @using DnDCharCtor.Common.Services
-@using DnDCharCtor.Common.Resources
+@using DnDCharCtor.Resources
 @using DnDCharCtor.Models
 
 @using DnDCharCtor.Ui.Components
