--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CardBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CardBase.razor
@@ -6,14 +6,19 @@
     </FluentHeader>
 
     <FluentBodyContent>
-        <FluentStack 
-            Orientation="Orientation.Vertical"
-            VerticalAlignment="VerticalAlignment.Center"
-            HorizontalAlignment="HorizontalAlignment.Start"
-            onclick="@EditCallback">
-           @ChildContent
-        </FluentStack>
-
+        <FluentAccordion>
+            <FluentAccordionItem Heading="@StringResources.Button_Properties" Expanded="true">
+                <div style="cursor: pointer;">
+                    <FluentStack Orientation="Orientation.Vertical"
+                                 VerticalAlignment="VerticalAlignment.Center"
+                                 HorizontalAlignment="HorizontalAlignment.Start"
+                                 onclick="@EditCallback">
+                        @ChildContent
+                    </FluentStack>
+                </div>   
+            </FluentAccordionItem>
+        </FluentAccordion>
+        
         <br />
         <FluentDivider />
         <br />
