--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -1,18 +1,18 @@
-﻿<CardBase Title="@StringResources.Character_Personality" EditCallback="EditPersonality" HasValidationErrors="@(_personalityViewModel?.HasValidationErrors ?? false)">
+﻿<CardBase Title="@StringResources.Character_Personality" EditCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
-    <div><strong>@StringResources.Character_Name:</strong> @_personalityViewModel?.CharacterName </div>
+    <div><strong>@StringResources.Character_Name:</strong> @ViewModel.CharacterName </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Class:</strong> @_personalityViewModel?.ClassName </div>
+    <div><strong>@StringResources.Character_Personality_Class:</strong> @ViewModel.ClassName </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Level:</strong> @_personalityViewModel?.Level </div>
+    <div><strong>@StringResources.Character_Personality_Level:</strong> @ViewModel.Level </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Background:</strong> @_personalityViewModel?.Background </div>
+    <div><strong>@StringResources.Character_Personality_Background:</strong> @ViewModel.Background </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_PlayerName:</strong> @_personalityViewModel?.PlayerName </div>
+    <div><strong>@StringResources.Character_Personality_PlayerName:</strong> @ViewModel.PlayerName </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Race:</strong> @_personalityViewModel?.Race </div>
+    <div><strong>@StringResources.Character_Personality_Race:</strong> @ViewModel.Race </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Attitute:</strong> @_personalityViewModel?.Attitute </div>
+    <div><strong>@StringResources.Character_Personality_Attitute:</strong> @ViewModel.Attitute </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Experience:</strong> @_personalityViewModel?.Experience </div>
+    <div><strong>@StringResources.Character_Personality_Experience:</strong> @ViewModel.Experience </div>
 </CardBase>
