--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -25,6 +25,7 @@
 @using DnDCharCtor.Ui.Components
 @using DnDCharCtor.Ui.Components.Cards
 @using DnDCharCtor.Ui.Components.Dialogs
+@using DnDCharCtor.Ui.Components.Input
 @using DnDCharCtor.Ui.Constants
 
 @using DnDCharCtor.ViewModels
