--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Input/FluentIntegerField.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Input/FluentIntegerField.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.Web
 
 <!--https://stackoverflow.com/questions/66341018/blazor-how-do-you-prevent-non-numeric-characters-in-a-textbox-inputtext-->
-<!--This input element allows only **numeric characters (0-9)** and the **backspace key**. Here's a breakdown of the code:
+<!--This input element allows only **numeric characters (0-9)**. Here's a breakdown of the code:
 
 - `event.charCode != 8`: (charCode 8 is back-space-key) (I don't really understand why `!= 8` and then `== 0`).
 - `event.charCode == 0`: Allows non-character keys (like arrow keys).
