ToDo: `FluentIntegerField` causes more problems than it helps. Use Normal Text-Field instead. ViewModel should have String-Field with a `ParsedRangeAttribute` so we can verify range and display proper error message (like that input must be an integer);

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Input/FluentIntegerField.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Input/FluentIntegerField.razor
@@ -8,12 +8,9 @@
 - `event.charCode == 0`: Allows non-character keys (like arrow keys).
 - `(event.charCode >= 48 && event.charCode <= 57)`: Allows numeric characters (charCodes 48 to 57 correspond to '0' to '9').-->
 <FluentTextField 
-    type="number" 
-    onkeypress="return (event.charCode != 8 && event.charCode == 0 || (event.charCode >= 48 && event.charCode <= 57))" 
     Inputmode="InputMode.Numeric" 
-    Pattern="[0-9]*" 
     Value="@InputValue" 
-    ValueChanged="InputChanged" 
+    ValueChanged="@(async (string input) => await InputChanged(input))" 
     Label="@Label" 
     Immediate="@Immediate" 
     Required="@Required" />
