--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
@@ -9,7 +9,7 @@
     <ValidationMessage For="@(() => Content.ClassName)" />
     <br />
 
-    <FluentIntegerField @bind-Value="Content.Level" Label="@StringResources.Character_Personality_Level" Immediate="true" Required="true" />
+    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Level" Label="@StringResources.Character_Personality_Level" Immediate="true" Required="true" />
     <ValidationMessage For="@(() => Content.Level)" />
     <br />
 
@@ -29,6 +29,6 @@
     <ValidationMessage For="@(() => Content.Attitute)" />
     <br />
 
-    <FluentIntegerField @bind-Value="Content.Experience" Label="@StringResources.Character_Personality_Experience" Immediate="true" Required="true" />
+    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Experience" Label="@StringResources.Character_Personality_Experience" Immediate="true" Required="true" />
     <ValidationMessage For="@(() => Content.Experience)" />
 </DialogBase>
