--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
@@ -1,15 +1,15 @@
 ﻿@implements IDialogContentComponent<PersonalityViewModel>
 
 <DialogBase Content="@Content">
-    <FluentTextField @bind-Value="Content.CharacterName" Label="@StringResources.Character_Name" Immediate="true" Required="true" />
+    <FluentTextField @bind-Value="Content.CharacterName" Label="@StringResources.Character_Name" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.CharacterName)" />
     <br />
 
-    <FluentTextField @bind-Value="Content.ClassName" Label="@StringResources.Character_Personality_Class" Immediate="true" Required="true" />
+    <FluentTextField @bind-Value="Content.ClassName" Label="@StringResources.Character_Personality_Class" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.ClassName)" />
     <br />
 
-    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Level" Label="@StringResources.Character_Personality_Level" Immediate="true" Required="true" />
+    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Level" Label="@StringResources.Character_Personality_Level" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.Level)" />
     <br />
 
@@ -17,11 +17,11 @@
     <ValidationMessage For="@(() => Content.Background)" />
     <br />
 
-    <FluentTextField @bind-Value="Content.PlayerName" Label="@StringResources.Character_Personality_PlayerName" Immediate="true" Required="true" />
+    <FluentTextField @bind-Value="Content.PlayerName" Label="@StringResources.Character_Personality_PlayerName" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.PlayerName)" />
     <br />
 
-    <FluentTextField @bind-Value="Content.Race" Label="@StringResources.Character_Personality_Race" Immediate="true" Required="true" />
+    <FluentTextField @bind-Value="Content.Race" Label="@StringResources.Character_Personality_Race" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.Race)" />
     <br />
 
@@ -29,6 +29,6 @@
     <ValidationMessage For="@(() => Content.Attitute)" />
     <br />
 
-    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Experience" Label="@StringResources.Character_Personality_Experience" Immediate="true" Required="true" />
+    <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Experience" Label="@StringResources.Character_Personality_Experience" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
     <ValidationMessage For="@(() => Content.Experience)" />
 </DialogBase>
