Update: Since FluentUI is properly loaded in PWA but there are console-errors that it could not load the components and shows an error we disable the Error-UI;

--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
@@ -21,4 +21,16 @@
             <FluentDialogProvider />
             <FluentTooltipProvider />
         </main>
-    </div>
+
+        @{
+            # if DEBUG   
+            {
+                <div id="blazor-error-ui">
+                    An unhandled error has occurred.
+                    <a href="." class="reload">Reload</a>
+                    <span class="dismiss">🗙</span>
+                </div>
+            }     
+            #endif
+        }
+</div>
