Update: ViewModel should contain Title;
Comment: This fixed the bug for PWA but on MAUI the problem is on startup;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -1,6 +1,6 @@
 ﻿<FluentHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
-        <FluentLabel Typo="Typography.PaneHeader">@Title</FluentLabel>
+        <FluentLabel Typo="Typography.PaneHeader">@ViewModel.Title</FluentLabel>
     </FluentStack>
 </FluentHeader>
 
