--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -33,7 +33,7 @@
                 <NavLink class="nav-link" style="display: flex; width=100%" href="@Routes.EditCharacter">
                     <FluentIcon Value="@(new Icons.Regular.Size20.EditPerson())" Color="Color.Custom" CustomColor="white" />
                     <FluentSpacer Width="10" />
-                    <FluentLabel Color="Color.Custom" CustomColor="white">@StringResources.CharacterEditor_Edit</FluentLabel>
+                    <FluentLabel Color="Color.Custom" CustomColor="white">@StringResources.Page_Edit</FluentLabel>
                 </NavLink>
             </div>
         }
