Fix: Crash when SqLite-DB did not exist;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿<FluentOverlay
     Opacity="0.4"
     Alignment="Align.Center"
-    Justification="JustifyContent.Center">
-    <FluentProgressRing />
+    Justification="JustifyContent.Center"
+    Visible="@ViewModel.IsBusy">
+    <FluentProgressRing Visible="@ViewModel.IsBusy" />
 </FluentOverlay>
