--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -62,6 +62,14 @@
                 <FluentLabel Color="Color.Custom" CustomColor="white">@StringResources.Page_Settings</FluentLabel>
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" style="display: flex; width=100%" href="@Routes.Info">
+                <FluentIcon Value="@(new Icons.Regular.Size20.Info())" Color="Color.Custom" CustomColor="white" />
+                <FluentSpacer Width="10" />
+                <FluentLabel Color="Color.Custom" CustomColor="white">@StringResources.Page_Info</FluentLabel>
+            </NavLink>
+        </div>
     </nav>
 </div>
 
