--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -4,6 +4,7 @@
 @using System.Linq.Expressions
 @using System.Net.Http
 @using System.Net.Http.Json
+@using System.Reflection
 
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
