--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -2,6 +2,11 @@
     <br />
     <div><strong>@StringResources.Character_Name:</strong> @ViewModel.CharacterName </div>
     <br />
+    @if (string.IsNullOrWhiteSpace(ViewModel.Base64EncodedImage) is false)
+    {
+        <img src="data:image/jpeg;base64,@ViewModel.Base64EncodedImage" style="height: 100px; width: 100px;" alt="Base64 Image" />
+    }
+    <br />
     <div><strong>@StringResources.Character_Personality_Class:</strong> @ViewModel.ClassName </div>
     <br />
     <div><strong>@StringResources.Character_Personality_Level:</strong> @ViewModel.Level </div>
