Update: `CurrentCharacter`-Page so that character can be persistent edited; Fix: Unable to Edit even when there are no changes; Add: `CreateCharacter`-Page that redirects to `EditCharacter` (this way `OnInitialized` is triggered); Fix: `HybridChache` that did not replace old entry with updated;

--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -27,7 +27,7 @@
             </div>
         }
 
-        @if (EditCharacterViewModel.EditMode is EditMode.Edit)
+        @if (EditCharacterViewModel.EditMode is EditMode.Edit && EditCharacterViewModel.IsSaved is false)
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" style="display: flex; width=100%" href="@Routes.EditCharacter">
