--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="page">
         <div class="sidebar">
-            <NavMenu ViewModel="@(ViewModel.CurrentCharacterViewModel)" />
+            <NavMenu />
         </div>
 
         <main>
