--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -1,4 +1,4 @@
-﻿<CardBase Title="@StringResources.Character_Personality" EditCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
+﻿<CardBase Title="@StringResources.Character_Personality" EditButtonCallback="EditPersonality" CardClickCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
     <div><strong>@StringResources.Character_Name:</strong> @ViewModel.CharacterName </div>
     <br />
