--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Characters.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Characters.razor
@@ -8,7 +8,7 @@
     @foreach (var character in ViewModel.Characters)
     {
         <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2">
-            <PersonalityCard @bind-ViewModel="@(character.PersonalityViewModel)" />
+            <CharacterCard ViewModel="character" />
         </FluentGridItem>
     }  
 </FluentGrid>
