--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DeleteCharacterDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DeleteCharacterDialog.razor
@@ -3,7 +3,7 @@
 <DeleteDialogBase DeleteButtonText="@StringResources.Button_Delete" CancelButtonText="@StringResources.Button_Cancel">
     <FluentLabel Typo="Typography.PaneHeader" Color="Color.Error">@StringResources.Dialog_DeleteCharacterText</FluentLabel>
     <br />
-    <CharacterCard ViewModel="Character" />
+    <CharacterCard ViewModel="Content" />
 </DeleteDialogBase>
 
 
